# clearpath_simulator

clearpath_gz/: CMakeLists.txt  package.xml
clearpath_gz/launch/: gz_sim.launch.py
clearpath_gz/msg/: DataMessage.msg  GPSTarget.msg
clearpath_gz/src/clearpath_gz/: gps_target.py  gps_target_race_track.py  path_following.py  save_data.py  target_detection.py  target_tracking.py  waypoint_navigation.py
clearpath_gz/src/clearpath_gz/waypoints/: gps_waypoints.csv
clearpath_gz/worlds/: empty_world.sdf  path_following_world.sdf  waypoint_world.sdf
