<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_gz</name>
  <version>0.3.0</version>
  <description>Clearpath Gazebo Simulator</description>
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <author email="rkreinin@clearpathrobotics.com">Roni Kreinin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- DAYLAN: Added dependencies for custom messages-->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!--                                               -->

  <exec_depend>clearpath_common</exec_depend>
  <exec_depend>clearpath_generator_gz</exec_depend>
  <exec_depend>clearpath_viz</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ros_gz</exec_depend>

  <!-- DAYLAN: Added dependencies for custom scripts-->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!--                                              -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>   <!--DAYLAN-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
